refactor: Stream API 파이프라인 toList() 메소드 사용 #18